--- a/Usurvey/templates/base.html
+++ b/Usurvey/templates/base.html
@@ -53,17 +53,17 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       {% if user.is_authenticated %}
-      <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">התנתק</a>
+      <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">התנתק</a><!-- logout -->
       <form id="logout" method="POST" action="{% url 'logout' %}">
         {% csrf_token %}
         <input type="hidden" />
       </form>
-      <a class="nav-link" href="{% url 'makereview' %}">הוסף ביקורת</a>
+      <a class="nav-link" href="{% url 'makereview' %}">הוסף ביקורת</a><!-- make review -->
       {% else %}
-      <a class="nav-link" href="">כניסה</a>
-      <a class="nav-link" href="{% url 'signup'%}">הרשמה</a>
+      <a class="nav-link" href="{% url 'login' %}">כניסה</a><!-- login -->
+      <a class="nav-link" href="{% url 'signup'%}">הרשמה</a><!-- signup -->
       {% endif %}
-      <a class="nav-link" href="">כל הביקורות</a>
+      <a class="nav-link" href="">כל הביקורות</a><!-- all reviews -->
     </ul>
   </div>
 </nav>
