login and signup working fine with database also now user can upload review

--- a/Usurvey/templates/base.html
+++ b/Usurvey/templates/base.html
@@ -63,7 +63,7 @@
       <a class="nav-link" href="{% url 'login' %}">כניסה</a><!-- login -->
       <a class="nav-link" href="{% url 'signup'%}">הרשמה</a><!-- signup -->
       {% endif %}
-      <a class="nav-link" href="">כל הביקורות</a><!-- all reviews -->
+      <a class="nav-link" href="{% url 'all_reviews' %}">כל הביקורות</a><!-- all reviews -->
     </ul>
   </div>
 </nav>
