database stores user data and email

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -15,15 +15,19 @@
   <div class="container">
   :שם פרטי
   <br/>
-  <input type="text" name="first name" />
+  <input type="text" name="first_name" />
   <br/>
   :שם משפחה
   <br/>
-  <input type="text" name="last name" />
+  <input type="text" name="last_name" />
   <br/>
   :שם משתמש
   <br/>
   <input type="text" name="username" />
+  <br/>
+  :אי-מייל
+  <br/>
+  <input type="text" name="email" />
   <br/>
   :סיסמא
   <br/>
