--- a/Usurvey/templates/base.html
+++ b/Usurvey/templates/base.html
@@ -53,6 +53,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       {% if user.is_authenticated %}
+      <a class="nav-link" href="">שלום, {{ full_name }}</a>
       <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">התנתק</a><!-- logout -->
       <form id="logout" method="POST" action="{% url 'logout' %}">
         {% csrf_token %}
