check website upload

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="text-center">
 <div class="container">
-<h1>Sign Up today!</h1>
+<h1>!הירשם עוד היום</h1>
 {% if error %}
 <br/>
 {{error}}
