--- a/Usurvey/templates/base.html
+++ b/Usurvey/templates/base.html
@@ -52,6 +52,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
+      <a class="nav-link" href="#">4חברה</a>
+      <a class="nav-link" href="#">3חברה</a>
+      <a class="nav-link" href="#">2חברה</a>
+      <a class="nav-link" href="#">1חברה</a>
+      <h1>|</h1>
       {% if user.is_authenticated %}
       <a class="nav-link" href="">שלום, {{ full_name }}</a>
       <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">התנתק</a><!-- logout -->
