--- a/reviews/templates/review_detailed.html
+++ b/reviews/templates/review_detailed.html
@@ -8,9 +8,43 @@
 		<br/>
 		<img src="{{ review.Image.url }}"/>
 		<br/>
-		Votes: {{review.Votes}}
+		<hr/>
+        <div class="text-center">
+    
+    
+	        <div >
+	        			{% if user.is_authenticated %}
+            
+		        <form id="rate" method="POST" action="{% url 'rate' review.id %}">
+		        	{% csrf_token %}
+		            <label class="required" for="id_Votes">Add stars:</label>
+		            
+		                <select name="Votes" id="id_Votes">
+									 <option value="1">1</option>
+
+								  <option value="2">2</option>
+
+								  <option value="3" selected>3</option>
+
+								  <option value="4">4</option>
+
+								  <option value="5">5</option>
+
+								</select>
+                    
+                </div>
+            
+        </div>
 		<br/>
-		<input class="btn btn-primary" type="submit" value="תן נקודה!"/>
+		<a href="javascript:{document.getElementById('rate').submit()}">
+			<button class="btn btn-primary" type="submit">שלח </button>
+		</a>
+		{% else %}
+		<a class="btn btn-lg btn-primary" href="{% url 'login'%}" role="button">התחבר</a>
+		{% endif %}
+	</form>
+	<br/>
+	Stars total: {{review.Votes_total}}
 		<div class = text-left>
 			{{review.Date}}
 		</div>
